--- a/ips/po/es/untangle-node-ips.po
+++ b/ips/po/es/untangle-node-ips.po
@@ -8,206 +8,201 @@ msgstr ""
 "Project-Id-Version: Untangle\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-11-10 11:22-0800\n"
-"PO-Revision-Date: 2008-11-21 17:15-0800\n"
-"Last-Translator: \n"
-"Language-Team: Chinese <j.zhu@impactek.com>\n"
+"PO-Revision-Date: 2008-11-20 05:44-0700\n"
+"Last-Translator: David Russi <dprussi@qwest.net>\n"
+"Language-Team: Spanish <dprussi@qwest.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"X-Poedit-Language: Chinese\n"
-"X-Poedit-Country: CHINA\n"
-"X-Poedit-SourceCharset: utf-8\n"
+"X-Poedit-Language: Spanish\n"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-ips/settings.js:27
 msgid "Status"
-msgstr "状态"
+msgstr "Estado"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-ips/settings.js:37
 msgid "Statistics"
-msgstr "统计信息"
+msgstr "Estadísticas"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-ips/settings.js:45
 msgid "Total Signatures Available"
-msgstr "总的可用签名"
+msgstr "Cantidad total de firmas disponibles"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-ips/settings.js:49
 msgid "Total Signatures Logging"
-msgstr "总的签名记录"
+msgstr "Cantidad total de firmas registradas"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-ips/settings.js:53
 msgid "Total Signatures Blocking"
-msgstr "总阻止的签名"
+msgstr "Cantidad total de firmas bloqueadas"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-ips/settings.js:58
 msgid "Note"
-msgstr "注释"
+msgstr "Nota"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-ips/settings.js:60
 msgid "{0} continues to maintain the default signature settings through automatic updates. You are free to modify and add signatures, however it is not required."
-msgstr "{0}通过自动更新继续维持默认的签名设置。尽管并不需要，但您可以随意的修改和添加签名。"
+msgstr "{0} conserva la configuración predeterminada de firmas entre actualizaciones automáticas. Aunque puede modificar y agregar firmas, no es necesario."
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-ips/settings.js:70
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-ips/settings.js:313
 msgid "block"
-msgstr "阻止"
+msgstr "bloquear"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-ips/settings.js:77
 msgid "log"
-msgstr "日志"
+msgstr "log"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-ips/settings.js:87
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-ips/settings.js:112
 msgid "Rules"
-msgstr "规则"
+msgstr "Reglas"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-ips/settings.js:103
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-ips/settings.js:106
 msgid "[no category]"
-msgstr "【无分类】"
+msgstr "[sin categoría]"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-ips/settings.js:104
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-ips/settings.js:229
 msgid "[no name]"
-msgstr "【无名称】"
+msgstr "[sin nombre]"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-ips/settings.js:105
 msgid "[no signature]"
-msgstr "【无签名】"
+msgstr "[sin firma]"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-ips/settings.js:110
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-ips/settings.js:231
 msgid "[no description]"
-msgstr "【无描述】"
+msgstr "[sin descripción]"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-ips/settings.js:140
 msgid "category"
-msgstr "分类"
+msgstr "categoría"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-ips/settings.js:148
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-ips/settings.js:267
 msgid "description"
-msgstr "描述"
+msgstr "descripción"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-ips/settings.js:165
 msgid "id"
-msgstr "标识"
+msgstr "id."
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-ips/settings.js:171
 msgid "info"
-msgstr "信息"
+msgstr "información"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-ips/settings.js:187
 msgid "Category"
-msgstr "分类"
+msgstr "Categoría"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-ips/settings.js:193
 msgid "Signature"
-msgstr "签名"
+msgstr "Firma"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-ips/settings.js:199
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-ips/settings.js:280
 msgid "Name"
-msgstr "名称"
+msgstr "Nombre"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-ips/settings.js:205
 msgid "SID"
-msgstr "安全标识"
+msgstr "SID"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-ips/settings.js:211
 msgid "Block"
-msgstr "阻止"
+msgstr "Bloquear"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-ips/settings.js:215
 msgid "Log"
-msgstr "日志"
+msgstr "Log"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-ips/settings.js:219
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-ips/settings.js:292
 msgid "Description"
-msgstr "描述"
+msgstr "Descripción"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-ips/settings.js:230
 msgid "[no definition]"
-msgstr "【无定义】"
+msgstr "[sin definición]"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-ips/settings.js:233
 msgid "Variables"
-msgstr "变量"
+msgstr "Variables"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-ips/settings.js:251
 msgid "name"
-msgstr "名称"
+msgstr "nombre"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-ips/settings.js:259
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-ips/settings.js:316
 msgid "pass"
-msgstr "通过"
+msgstr "pasar"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-ips/settings.js:286
 msgid "Pass"
-msgstr "通过"
+msgstr "Pasar"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-ips/settings.js:338
 msgid "timestamp"
-msgstr "时间戳"
+msgstr "fecha y hora"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-ips/settings.js:346
 msgid "action"
-msgstr "动作"
+msgstr "medida"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-ips/settings.js:351
 msgid "client"
-msgstr "客户端"
+msgstr "cliente"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-ips/settings.js:358
 msgid "reason for action"
-msgstr "动作原因"
+msgstr "motivo de la medida tomada"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-ips/settings.js:363
 msgid "server"
-msgstr "服务器"
+msgstr "servidor"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-ips/settings.js:376
 msgid "Saving..."
-msgstr "正在保存。。。"
+msgstr "Guardando..."
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-ips/settings.js:376
 msgid "Please wait"
-msgstr "请等待"
+msgstr "Espere"
 
 #: ../impl/com/untangle/node/ips/IpsBlockedFilter.java:27
 msgid "Blocked Events"
-msgstr ""
+msgstr "Eventos bloqueados"
 
 #: ../impl/com/untangle/node/ips/IpsLogFilter.java:27
 msgid "All Events"
-msgstr ""
+msgstr "Todos los sucesos"
 
 #: ../impl/com/untangle/node/ips/IpsNodeImpl.java:97
 msgid "Sessions scanned"
-msgstr ""
+msgstr "Sesiones analizadas"
 
 #: ../impl/com/untangle/node/ips/IpsNodeImpl.java:97
 msgid "SCAN"
-msgstr ""
+msgstr "ANALIZAR"
 
 #: ../impl/com/untangle/node/ips/IpsNodeImpl.java:98
 msgid "Sessions logged"
-msgstr ""
+msgstr "Sesiones registradas"
 
 #: ../impl/com/untangle/node/ips/IpsNodeImpl.java:98
 msgid "DETECT"
-msgstr ""
+msgstr "DETECTAR"
 
 #: ../impl/com/untangle/node/ips/IpsNodeImpl.java:99
 msgid "Sessions blocked"
-msgstr ""
+msgstr "Sesiones bloqueadas"
 
 #: ../impl/com/untangle/node/ips/IpsNodeImpl.java:99
 msgid "BLOCK"
-msgstr ""
-
-#~ msgid "Failed"
-#~ msgstr "失败"
+msgstr "BLOQUEAR"
 
