--- a/phish/po/es/untangle-node-phish.po
+++ b/phish/po/es/untangle-node-phish.po
@@ -8,38 +8,36 @@ msgstr ""
 "Project-Id-Version: Untangle\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-11-21 14:15-0800\n"
-"PO-Revision-Date: 2008-11-21 17:17-0800\n"
+"PO-Revision-Date: 2008-11-21 16:24-0800\n"
 "Last-Translator: \n"
-"Language-Team: Chinese <j.zhu@impactek.com>\n"
+"Language-Team: Spanish <dprussi@qwest.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"X-Poedit-Language: Chinese\n"
-"X-Poedit-Country: CHINA\n"
-"X-Poedit-SourceCharset: utf-8\n"
+"X-Poedit-Language: Spanish\n"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-phish/settings.js:46
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-phish/settings.js:48
 msgid "Mark"
-msgstr "标记"
+msgstr "Marcar"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-phish/settings.js:46
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-phish/settings.js:48
 msgid "Pass"
-msgstr "通过"
+msgstr "Pasar"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-phish/settings.js:47
 msgid "Block"
-msgstr "阻止"
+msgstr "Bloquear"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-phish/settings.js:47
 msgid "Quarantine"
-msgstr "隔离"
+msgstr "Cuarentena"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-phish/settings.js:50
 msgid "Email"
-msgstr "电子邮件"
+msgstr "Email"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-phish/settings.js:58
 msgid "SMTP"
@@ -47,13 +45,13 @@ msgstr "SMTP"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-phish/settings.js:65
 msgid "Scan SMTP"
-msgstr "扫描SMTP"
+msgstr "Analizar SMTP"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-phish/settings.js:86
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-phish/settings.js:129
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-phish/settings.js:172
 msgid "Action"
-msgstr "动作"
+msgstr "Medida"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-phish/settings.js:101
 msgid "POP3"
@@ -61,7 +59,7 @@ msgstr "POP3"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-phish/settings.js:108
 msgid "Scan POP3"
-msgstr "扫描POP3"
+msgstr "Analizar POP3"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-phish/settings.js:144
 msgid "IMAP"
@@ -69,111 +67,111 @@ msgstr "IMAP"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-phish/settings.js:151
 msgid "Scan IMAP"
-msgstr "扫描IMAP"
+msgstr "Analizar IMAP"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-phish/settings.js:187
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-phish/settings.js:224
 msgid "Note"
-msgstr "注释"
+msgstr "Nota"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-phish/settings.js:190
 msgid "Phish Blocker email signatures were last updated"
-msgstr "钓鱼防护电子邮件签名已是最后更新"
+msgstr "Última actualización de las firmas de email de Phish Blocker realizada el"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-phish/settings.js:193
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-phish/settings.js:230
 msgid "unknown"
-msgstr "未知"
+msgstr "desconocido"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-phish/settings.js:200
 msgid "Web"
-msgstr "互联网(Web)"
+msgstr "Web"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-phish/settings.js:210
 msgid "Enable Phish web filtering"
-msgstr "启用Web钓鱼过滤"
+msgstr "Activar filtración de páginas web de phishing"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-phish/settings.js:227
 msgid "Phish Blocker web signatures were last updated "
-msgstr "钓鱼防护Web签名已是最后更新"
+msgstr "Última actualización de las firmas de web de Phish Blocker realizada el"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-phish/settings.js:252
 msgid "Web Event Log"
-msgstr "Web事件日志"
+msgstr "Log de eventos de web"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-phish/settings.js:265
 msgid "pass"
-msgstr "通过"
+msgstr "pasar"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-phish/settings.js:268
 msgid "block"
-msgstr "阻止"
+msgstr "bloquear"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-phish/settings.js:286
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-phish/settings.js:385
 msgid "timestamp"
-msgstr "时间戳"
+msgstr "fecha y hora"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-phish/settings.js:294
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-phish/settings.js:393
 msgid "action"
-msgstr "动作"
+msgstr "medida"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-phish/settings.js:299
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-phish/settings.js:398
 msgid "client"
-msgstr "客户端"
+msgstr "cliente"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-phish/settings.js:305
 msgid "request"
-msgstr "请求"
+msgstr "solicitud"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-phish/settings.js:311
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-phish/settings.js:418
 msgid "server"
-msgstr "服务器"
+msgstr "servidor"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-phish/settings.js:325
 msgid "Email Event Log"
-msgstr "电子邮件事件日志"
+msgstr "Log de eventos de email"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-phish/settings.js:339
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-phish/settings.js:348
 msgid "pass message"
-msgstr "通过邮件"
+msgstr "pasar mensaje"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-phish/settings.js:342
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-phish/settings.js:350
 msgid "mark infection"
-msgstr "感染标记"
+msgstr "marcar infección"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-phish/settings.js:352
 msgid "block message"
-msgstr "阻止邮件"
+msgstr "bloquear mensaje"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-phish/settings.js:355
 msgid "quarantine message"
-msgstr "隔离邮件"
+msgstr "poner mensaje en cuarentena"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-phish/settings.js:403
 msgid "subject"
-msgstr "主题"
+msgstr "asunto"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-phish/settings.js:408
 msgid "receiver"
-msgstr "收件人"
+msgstr "receptor"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-phish/settings.js:413
 msgid "sender"
-msgstr "发件人"
+msgstr "remitente"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-phish/settings.js:428
 msgid "Saving..."
-msgstr "正在保存。。。"
+msgstr "Guardando..."
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-phish/settings.js:428
 msgid "Please wait"
-msgstr "请等候"
+msgstr "Espere"
 
 #: ../servlets/idblocker/src/com/untangle/node/phish/BlockPageServlet.java:65
 #: ../servlets/idblocker/src/com/untangle/node/phish/BlockPageServlet.java:74
@@ -183,22 +181,22 @@ msgstr ""
 #: ../servlets/idblocker/src/com/untangle/node/phish/BlockPageServlet.java:105
 #, java-format
 msgid "{0} | Phish Blocker Warning"
-msgstr "{0} |钓鱼防护警告"
+msgstr "{0} | Aviso de Phish Blocker"
 
 #: ../servlets/idblocker/src/com/untangle/node/phish/BlockPageServlet.java:116
 #, java-format
 msgid "{0}  Phish Blocker"
-msgstr "{0}钓鱼防护"
+msgstr "{0}  Phish Blocker"
 
 #: ../servlets/idblocker/src/com/untangle/node/phish/BlockPageServlet.java:128
 #, java-format
 msgid "{0}This web page was blocked{1} because it may be designed to steal personal information."
-msgstr "{0}该网页已被阻止{1}因为它可能是专门设计来盗取您的私人信息的。"
+msgstr "{0}Esta página web fue bloqueada{1} porque es posible que haya sido diseñada para robar datos personales."
 
 #: ../../http-casing/localapi/com/untangle/node/http/BlockPageUtil.java:67
 #, java-format
 msgid "If you have any questions, Please contact {0}."
-msgstr "如果您有任何问题，请联系{0}。"
+msgstr "Si tiene preguntas comuníquese con {0}."
 
 #: ../../spam-base/impl/com/untangle/node/spam/SpamAllFilter.java:27
 msgid "All Events"
@@ -222,36 +220,33 @@ msgstr ""
 
 #: ../impl/com/untangle/node/phish/PhishHttpAllFilter.java:38
 msgid "All Phish HTTP Traffic"
-msgstr ""
+msgstr "Todo el tráfico HTTP de phishing"
 
 #: ../impl/com/untangle/node/phish/PhishHttpBlockedFilter.java:27
 msgid "Blocked Phish HTTP Traffic"
-msgstr ""
+msgstr "Tráfico HTTP de phishing bloqueado"
 
 #: ../impl/com/untangle/node/phish/PhishHttpPassedFilter.java:38
 msgid "Passed Phish HTTP Traffic"
-msgstr ""
+msgstr "Tráfico HTTP de phishing pasado"
 
 #: ../../uvm-lib/servlets/blockpage/root/blockpage_template.jspx:48
 msgid "Host:"
-msgstr "主机："
+msgstr "Host:"
 
 #: ../../uvm-lib/servlets/blockpage/root/blockpage_template.jspx:49
 msgid "URL:"
-msgstr "链接："
+msgstr "URL:"
 
 #: ../../uvm-lib/servlets/blockpage/root/blockpage_template.jspx:51
 msgid "Reason:"
-msgstr "原因："
+msgstr "Razón:"
 
 #: ../../uvm-lib/servlets/blockpage/root/blockpage_template.jspx:57
 msgid "Unblock For Now"
-msgstr "现在开始不阻止"
+msgstr "Desbloquear por ahora"
 
 #: ../../uvm-lib/servlets/blockpage/root/blockpage_template.jspx:63
 msgid "Unblock Permanently"
-msgstr "永远不阻止"
-
-#~ msgid "Failed"
-#~ msgstr "失败"
+msgstr "Desbloquear permanentemente"
 
