--- a/phish/po/pt_BR/untangle-node-phish.po
+++ b/phish/po/pt_BR/untangle-node-phish.po
@@ -5,12 +5,12 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: Untangle\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-11-21 14:15-0800\n"
-"PO-Revision-Date: 2008-11-12 21:40-0800\n"
-"Last-Translator: Claudia\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"PO-Revision-Date: 2008-11-21 16:53-0800\n"
+"Last-Translator: \n"
+"Language-Team: Portuguese <claudia@englishtoportuguese.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -191,12 +191,8 @@ msgstr "{0}  Phish Blocker"
 
 #: ../servlets/idblocker/src/com/untangle/node/phish/BlockPageServlet.java:128
 #, java-format
-msgid ""
-"{0}This web page was blocked{1} because it may be designed to steal personal "
-"information."
-msgstr ""
-"{0}Esta página da web foi bloqueada{1} porque ela pode ter sido projetada "
-"para roubar informações pessoais."
+msgid "{0}This web page was blocked{1} because it may be designed to steal personal information."
+msgstr "{0}Esta página da web foi bloqueada{1} porque ela pode ter sido projetada para roubar informações pessoais."
 
 #: ../../http-casing/localapi/com/untangle/node/http/BlockPageUtil.java:67
 #, java-format
@@ -254,3 +250,4 @@ msgstr "Desbloquear por agora"
 #: ../../uvm-lib/servlets/blockpage/root/blockpage_template.jspx:63
 msgid "Unblock Permanently"
 msgstr "Desbloquear permanentemente"
+
