--- a/protofilter/po/es/untangle-node-protofilter.po
+++ b/protofilter/po/es/untangle-node-protofilter.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: Untangle\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-11-10 11:22-0800\n"
-"PO-Revision-Date: 2008-11-13 08:48-0800\n"
-"Last-Translator: Claudia\n"
-"Language-Team: Portuguese <claudia@englishtoportuguese.com>\n"
+"PO-Revision-Date: 2008-11-20 05:46-0700\n"
+"Last-Translator: David Russi <dprussi@qwest.net>\n"
+"Language-Team: Spanish <dprussi@qwest.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"X-Poedit-Language: Portuguese\n"
+"X-Poedit-Language: Spanish\n"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-protofilter/settings.js:19
 msgid "block"
@@ -23,23 +23,23 @@ msgstr "bloquear"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-protofilter/settings.js:25
 msgid "log"
-msgstr "registrar"
+msgstr "log"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-protofilter/settings.js:38
 msgid "[no category]"
-msgstr "[nenhuma categoria]"
+msgstr "[sin categoría]"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-protofilter/settings.js:39
 msgid "[no protocol]"
-msgstr "[nenhum protocolo]"
+msgstr "[sin protocolo]"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-protofilter/settings.js:42
 msgid "[no description]"
-msgstr "[nenhuma descrição]"
+msgstr "[sin descripción]"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-protofilter/settings.js:43
 msgid "[no signature]"
-msgstr "[nenhuma assinatura]"
+msgstr "[sin firma]"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-protofilter/settings.js:45
 msgid "Protocol List"
@@ -47,7 +47,7 @@ msgstr "Lista de protocolo"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-protofilter/settings.js:77
 msgid "category"
-msgstr "categoria"
+msgstr "categoría"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-protofilter/settings.js:86
 msgid "protocol"
@@ -55,11 +55,11 @@ msgstr "protocolo"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-protofilter/settings.js:94
 msgid "description"
-msgstr "descrição"
+msgstr "descripción"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-protofilter/settings.js:108
 msgid "Category"
-msgstr "Categoria"
+msgstr "Categoría"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-protofilter/settings.js:114
 msgid "Protocol"
@@ -71,15 +71,15 @@ msgstr "Bloquear"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-protofilter/settings.js:124
 msgid "Log"
-msgstr "Registrar"
+msgstr "Log"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-protofilter/settings.js:128
 msgid "Description"
-msgstr "Descrição"
+msgstr "Descripción"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-protofilter/settings.js:134
 msgid "Signature"
-msgstr "Assinatura"
+msgstr "Firma"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-protofilter/settings.js:144
 msgid "blocked"
@@ -87,23 +87,23 @@ msgstr "bloqueado"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-protofilter/settings.js:144
 msgid "passed"
-msgstr "permitido"
+msgstr "pasado"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-protofilter/settings.js:147
 msgid "blocked in block list"
-msgstr "bloqueado na lista de bloquear"
+msgstr "bloqueado en la lista de bloqueo"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-protofilter/settings.js:147
 msgid "not blocked in block list"
-msgstr "não bloqueado na lista de bloquear"
+msgstr "no bloqueado en la lista de bloqueo"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-protofilter/settings.js:178
 msgid "timestamp"
-msgstr "marcação de horário"
+msgstr "fecha y hora"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-protofilter/settings.js:186
 msgid "action"
-msgstr "ação"
+msgstr "medida"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-protofilter/settings.js:191
 msgid "client"
@@ -111,11 +111,11 @@ msgstr "cliente"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-protofilter/settings.js:197
 msgid "request"
-msgstr "solicitação"
+msgstr "solicitud"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-protofilter/settings.js:202
 msgid "reason for action"
-msgstr "razão para ação"
+msgstr "motivo de la medida tomada"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-protofilter/settings.js:207
 msgid "server"
@@ -123,11 +123,11 @@ msgstr "servidor"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-protofilter/settings.js:217
 msgid "Saving..."
-msgstr "Salvando..."
+msgstr "Guardando..."
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-protofilter/settings.js:217
 msgid "Please wait"
-msgstr "Aguarde"
+msgstr "Espere"
 
 #: ../impl/com/untangle/node/protofilter/ProtoFilterAllFilter.java:27
 msgid "Protocol Events"
@@ -139,15 +139,15 @@ msgstr "Eventos de protocolo bloqueados"
 
 #: ../impl/com/untangle/node/protofilter/ProtoFilterImpl.java:90
 msgid "Sessions scanned"
-msgstr "Sessões varridas"
+msgstr "Sesiones analizadas"
 
 #: ../impl/com/untangle/node/protofilter/ProtoFilterImpl.java:90
 msgid "SCAN"
-msgstr "VARRER"
+msgstr "ANALIZAR"
 
 #: ../impl/com/untangle/node/protofilter/ProtoFilterImpl.java:91
 msgid "Sessions blocked"
-msgstr "Sessões bloqueadas"
+msgstr "Sesiones bloqueadas"
 
 #: ../impl/com/untangle/node/protofilter/ProtoFilterImpl.java:91
 msgid "BLOCK"
@@ -155,7 +155,7 @@ msgstr "BLOQUEAR"
 
 #: ../impl/com/untangle/node/protofilter/ProtoFilterImpl.java:92
 msgid "Sessions logged"
-msgstr "Sessões registradas"
+msgstr "Sesiones registradas"
 
 #: ../impl/com/untangle/node/protofilter/ProtoFilterImpl.java:92
 msgid "DETECT"
