--- a/protofilter/po/zh/untangle-node-protofilter.po
+++ b/protofilter/po/zh/untangle-node-protofilter.po
@@ -5,12 +5,12 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: Untangle\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-11-10 11:22-0800\n"
-"PO-Revision-Date: 2008-11-07 02:06-0500\n"
-"Last-Translator: Jie(Jack) Zhu <J.Zhu@Impactek.com>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"PO-Revision-Date: 2008-11-21 17:19-0800\n"
+"Last-Translator: \n"
+"Language-Team: Chinese <j.zhu@impactek.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -167,6 +167,6 @@ msgstr ""
 
 #~ msgid "signature"
 #~ msgstr "签名"
-
 #~ msgid "Failed"
 #~ msgstr "失败"
+
