--- a/reporting/po/es/untangle-node-reporting.po
+++ b/reporting/po/es/untangle-node-reporting.po
@@ -8,209 +8,206 @@ msgstr ""
 "Project-Id-Version: Untangle\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-11-04 11:30-0800\n"
-"PO-Revision-Date: 2008-11-21 17:19-0800\n"
-"Last-Translator: \n"
-"Language-Team: Chinese <j.zhu@impactek.com>\n"
+"PO-Revision-Date: 2008-11-20 05:46-0700\n"
+"Last-Translator: David Russi <dprussi@qwest.net>\n"
+"Language-Team: Spanish <dprussi@qwest.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"X-Poedit-Language: Chinese\n"
-"X-Poedit-Country: CHINA\n"
-"X-Poedit-SourceCharset: utf-8\n"
+"X-Poedit-Language: Spanish\n"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-reporting/settings.js:44
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-reporting/settings.js:51
 msgid "Status"
-msgstr "状态"
+msgstr "Estado"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-reporting/settings.js:60
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-reporting/settings.js:77
 msgid "View Reports"
-msgstr "查看报告"
+msgstr "Ver informes"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-reporting/settings.js:88
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-reporting/settings.js:105
 msgid "Archived Reports"
-msgstr "存档的报告"
+msgstr "Informes archivados"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-reporting/settings.js:175
 msgid "Generation"
-msgstr "生成"
+msgstr "Generación"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-reporting/settings.js:185
 msgid "Email"
-msgstr "电子邮件"
+msgstr "Email"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-reporting/settings.js:193
 msgid "Recipients"
-msgstr "收件人"
+msgstr "Destinatarios"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-reporting/settings.js:210
 msgid "email address"
-msgstr "电子邮件地址"
+msgstr "dirección de email"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-reporting/settings.js:216
 msgid "The email address cannot be blank."
-msgstr "电子邮件地址不能为空。"
+msgstr "La dirección de email no puede quedar en blanco."
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-reporting/settings.js:233
 msgid "Include {0}Incident Reports{1} in emailed reports"
-msgstr "将{0}关联报告{1}包含在邮件报告中"
+msgstr "Incluir {0}Informes de incidentes{1} en informes enviados por email."
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-reporting/settings.js:246
 msgid "This makes emailed reports larger, but includes information about each incident/violation."
-msgstr "这将使邮件报告增大，但每一项关联/违反的信息都会包含在内。"
+msgstr "Esto produce informes más grandes, pero incluye información sobre cada incidente o violación."
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-reporting/settings.js:251
 msgid "Daily Reports"
-msgstr "每日报告"
+msgstr "Informes diarios"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-reporting/settings.js:256
 msgid "Daily Reports are generated at midnight and covers events from the previous 24 hours, up to, but not including the day of generation."
-msgstr "每日报告将会在每天午夜生成并包含之前的24小时（昨天）发生的事件，但不会包含报告生成当天的信息。"
+msgstr "Los informes diarios se generan a medianoche y cubren los eventos ocurridos en las 24 horas anteriores hasta el día de generación, no inclusive."
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-reporting/settings.js:260
 msgid "Generate Daily Reports"
-msgstr "生成每日报告"
+msgstr "Generar informes diarios"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-reporting/settings.js:261
 msgid "Every Day"
-msgstr "每天"
+msgstr "Todos los días"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-reporting/settings.js:272
 msgid "Weekly Reports"
-msgstr "每周报告"
+msgstr "Informes semanales"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-reporting/settings.js:277
 msgid "Weekly Reports are generated at midnight and covers events from the previous 7 days, up to, but not including the day of generation."
-msgstr "每周报告将会在每周最后一天午夜生成并包含之前的7天（上周）发生的事件，但不会包含报告生成当天的信息。"
+msgstr "Los informes semanales se generan a medianoche y cubren los eventos ocurridos en los 7 días anteriores hasta el día de generación, no inclusive."
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-reporting/settings.js:282
 msgid "Generate Weekly Reports"
-msgstr "生成每周报告"
+msgstr "Generar informes semanales"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-reporting/settings.js:283
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-reporting/settings.js:385
 msgid "Sunday"
-msgstr "星期日"
+msgstr "Domingo"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-reporting/settings.js:289
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-reporting/settings.js:386
 msgid "Monday"
-msgstr "星期一"
+msgstr "Lunes"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-reporting/settings.js:297
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-reporting/settings.js:387
 msgid "Tuesday"
-msgstr "星期二"
+msgstr "Martes"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-reporting/settings.js:305
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-reporting/settings.js:388
 msgid "Wednesday"
-msgstr "星期三"
+msgstr "Miércoles"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-reporting/settings.js:313
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-reporting/settings.js:389
 msgid "Thursday"
-msgstr "星期四"
+msgstr "Jueves"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-reporting/settings.js:321
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-reporting/settings.js:390
 msgid "Friday"
-msgstr "星期五"
+msgstr "Viernes"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-reporting/settings.js:329
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-reporting/settings.js:391
 msgid "Saturday"
-msgstr "星期六"
+msgstr "Sábado"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-reporting/settings.js:335
 msgid "Monthly Reports"
-msgstr "每周报告"
+msgstr "Informes mensuales"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-reporting/settings.js:340
 msgid "Monthly Reports are generated at midnight and covers events from the previous 30 days, up to, but not including the day of generation."
-msgstr "每月报告将会在每月最后一天午夜生成并包含之前的30天（上月）发生的事件，但不会包含报告生成当天的信息。"
+msgstr "Los informes mensuales se generan a medianoche y cubren los eventos ocurridos en los 30 días anteriores hasta el día de generación, no inclusive."
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-reporting/settings.js:348
 msgid "Never"
-msgstr "从未"
+msgstr "Nunca"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-reporting/settings.js:353
 msgid "First Day of Month"
-msgstr "一月的第一天"
+msgstr "Primer día del mes"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-reporting/settings.js:358
 msgid "Everyday"
-msgstr "每天"
+msgstr "Todos los días"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-reporting/settings.js:363
 msgid "Once Per Week"
-msgstr "每周一次"
+msgstr "Una vez a la semana"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-reporting/settings.js:401
 msgid "Data Retention"
-msgstr "数据保持"
+msgstr "Retención de datos"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-reporting/settings.js:406
 msgid "Limits data retention to one week, this allows reports to run faster on high traffic sites."
-msgstr "将数据保持限制在一周，这将允许高数据流量的站更快的运行报告。"
+msgstr "Limita la retención de datos a una semana, lo cual acelera la ejecución de los informes en sitios de mucho tráfico."
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-reporting/settings.js:410
 msgid "Limit data retention"
-msgstr "限制数据保持"
+msgstr "Limitar retención de datos"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-reporting/settings.js:411
 msgid "Keep One Week's Data"
-msgstr "保持一周的数据"
+msgstr "Conservar datos de una semana"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-reporting/settings.js:430
-#, fuzzy
 msgid "IP Addresses"
-msgstr "IP地址"
+msgstr "Direcciones IP"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-reporting/settings.js:433
 msgid "[no name]"
-msgstr "【无名称】"
+msgstr "[sin nombre]"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-reporting/settings.js:434
 msgid "[no description]"
-msgstr "【无描述】"
+msgstr "[sin descripción]"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-reporting/settings.js:456
 msgid "IP address"
-msgstr "IP地址"
+msgstr "Dirección IP"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-reporting/settings.js:462
 msgid "name"
-msgstr "名称"
+msgstr "nombre"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-reporting/settings.js:472
 msgid "IP Address"
-msgstr "IP地址"
+msgstr "Dirección IP"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-reporting/settings.js:478
 msgid "Name"
-msgstr "名称"
+msgstr "Nombre"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-reporting/settings.js:512
 msgid "Invalid \"IP address\" specified"
-msgstr "指定了无效的“IP地址”"
+msgstr "Ha especificado una \"dirección IP\" no válida."
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-reporting/settings.js:520
 msgid "Validation failed"
-msgstr "验证失败"
+msgstr "Error de validación"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-reporting/settings.js:524
 msgid "Failed"
-msgstr "失败"
+msgstr "Falló"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-reporting/settings.js:535
 msgid "Saving..."
-msgstr "正在保存。。。"
+msgstr "Guardando..."
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-reporting/settings.js:535
 msgid "Please wait"
-msgstr "请等待"
+msgstr "Espere"
 
