--- a/reporting/po/pt_BR/untangle-node-reporting.po
+++ b/reporting/po/pt_BR/untangle-node-reporting.po
@@ -5,16 +5,17 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: Untangle\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-11-04 11:30-0800\n"
 "PO-Revision-Date: 2008-11-13 08:46-0800\n"
 "Last-Translator: Claudia\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"Language-Team: Portuguese <claudia@englishtoportuguese.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
+"X-Poedit-Language: Portuguese\n"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-reporting/settings.js:44
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-reporting/settings.js:51
