--- a/shield/po/es/untangle-node-shield.po
+++ b/shield/po/es/untangle-node-shield.po
@@ -8,31 +8,31 @@ msgstr ""
 "Project-Id-Version: Untangle\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-11-10 11:22-0800\n"
-"PO-Revision-Date: 2008-11-12 23:22-0800\n"
-"Last-Translator: Claudia\n"
-"Language-Team: Portuguese <claudia@englishtoportuguese.com>\n"
+"PO-Revision-Date: 2008-11-20 05:46-0700\n"
+"Last-Translator: David Russi <dprussi@qwest.net>\n"
+"Language-Team: Spanish <dprussi@qwest.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"X-Poedit-Language: Portuguese\n"
+"X-Poedit-Language: Spanish\n"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-shield/settings.js:20
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-shield/settings.js:32
 msgid "Status"
-msgstr "Status"
+msgstr "Estado"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-shield/settings.js:28
 msgid "Statistics"
-msgstr "Estatísticas"
+msgstr "Estadísticas"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-shield/settings.js:35
 msgid "active"
-msgstr "ativo"
+msgstr "activo"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-shield/settings.js:35
 msgid "inactive"
-msgstr "inativo"
+msgstr "inactivo"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-shield/settings.js:43
 msgid "Note"
@@ -40,7 +40,7 @@ msgstr "Nota"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-shield/settings.js:47
 msgid "Attack Blocker is a heuristic based intrusion prevention and requires no configuration. Users can modify the treatment of certain IP and/or networks on the exception tab."
-msgstr "O Bloqueador de Ataque é uma heurística com base na prevenção da invasão e não requer qualquer configuração. Os usuários podem modificar o tratamento de certos IP e/ou redes na guia de exceção."
+msgstr "Attack Blocker es un programa de prevención de intrusos basado en heurística y no requiere configuración. El usuario puede modificar el tratamiento de ciertas direcciones IP o redes en la ficha Excepciones."
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-shield/settings.js:55
 msgid "enable"
@@ -49,7 +49,7 @@ msgstr "habilitar"
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-shield/settings.js:60
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-shield/settings.js:61
 msgid "users"
-msgstr "usuários"
+msgstr "usuarios"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-shield/settings.js:61
 msgid "unlimited"
@@ -57,23 +57,23 @@ msgstr "ilimitado"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-shield/settings.js:74
 msgid "[no description]"
-msgstr "[nenhuma descrição]"
+msgstr "[sin descripción]"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-shield/settings.js:76
 msgid "Exceptions"
-msgstr "Exceções"
+msgstr "Excepciones"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-shield/settings.js:101
 msgid "address"
-msgstr "endereço"
+msgstr "dirección"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-shield/settings.js:111
 msgid "user count"
-msgstr "contagem de usuário"
+msgstr "recuento de usuarios"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-shield/settings.js:137
 msgid "description"
-msgstr "descrição"
+msgstr "descripción"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-shield/settings.js:151
 msgid "Enable"
@@ -81,31 +81,31 @@ msgstr "Habilitar"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-shield/settings.js:155
 msgid "Address"
-msgstr "Endereço"
+msgstr "Dirección"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-shield/settings.js:162
 msgid "User Count"
-msgstr "Contagem de usuário"
+msgstr "Recuento de usuarios"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-shield/settings.js:177
 msgid "Description"
-msgstr "Descrição"
+msgstr "Descripción"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-shield/settings.js:213
 msgid "timestamp"
-msgstr "marcação de horário"
+msgstr "fecha y hora"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-shield/settings.js:221
 msgid "source"
-msgstr "origem"
+msgstr "origen"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-shield/settings.js:227
 msgid "source interface"
-msgstr "interface de origem"
+msgstr "interfaz de origen"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-shield/settings.js:232
 msgid "reputation"
-msgstr "reputação"
+msgstr "reputación"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-shield/settings.js:240
 msgid "limited"
@@ -113,19 +113,19 @@ msgstr "limitado"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-shield/settings.js:248
 msgid "dropped"
-msgstr "abandonado"
+msgstr "interrumpido"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-shield/settings.js:256
 msgid "reject"
-msgstr "rejeitar"
+msgstr "rechazar"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-shield/settings.js:271
 msgid "Saving..."
-msgstr "Salvando..."
+msgstr "Guardando..."
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-shield/settings.js:271
 msgid "Please wait"
-msgstr "Aguarde"
+msgstr "Espere"
 
 #: ../impl/com/untangle/node/shield/LogIteration.java:194
 msgid "type"
