--- a/shield/po/zh/untangle-node-shield.po
+++ b/shield/po/zh/untangle-node-shield.po
@@ -5,12 +5,12 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: Untangle\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-11-10 11:22-0800\n"
-"PO-Revision-Date: 2008-11-07 02:42-0500\n"
-"Last-Translator: Jie(Jack) Zhu <J.Zhu@Impactek.com>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"PO-Revision-Date: 2008-11-21 17:20-0800\n"
+"Last-Translator: \n"
+"Language-Team: Chinese <j.zhu@impactek.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -41,13 +41,8 @@ msgid "Note"
 msgstr "注释"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-shield/settings.js:47
-msgid ""
-"Attack Blocker is a heuristic based intrusion prevention and requires no "
-"configuration. Users can modify the treatment of certain IP and/or networks "
-"on the exception tab."
-msgstr ""
-"攻击防护器是一个不需要任何配置的基于启发式的入侵预防。用户可以在排除项表中修"
-"改对于某个IP或网络的处理方式。"
+msgid "Attack Blocker is a heuristic based intrusion prevention and requires no configuration. Users can modify the treatment of certain IP and/or networks on the exception tab."
+msgstr "攻击防护器是一个不需要任何配置的基于启发式的入侵预防。用户可以在排除项表中修改对于某个IP或网络的处理方式。"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-shield/settings.js:55
 msgid "enable"
@@ -142,9 +137,8 @@ msgstr ""
 
 #~ msgid "user"
 #~ msgstr "用户"
-
 #~ msgid "count"
 #~ msgstr "计数"
-
 #~ msgid "Failed"
 #~ msgstr "失败"
+
