--- a/spamassassin/po/es/untangle-node-spamassassin.po
+++ b/spamassassin/po/es/untangle-node-spamassassin.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: Untangle\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-11-10 11:22-0800\n"
-"PO-Revision-Date: 2008-11-12 23:49-0800\n"
-"Last-Translator: Claudia\n"
-"Language-Team: Portuguese <claudia@englishtoportuguese.com>\n"
+"PO-Revision-Date: 2008-11-20 05:46-0700\n"
+"Last-Translator: David Russi <dprussi@qwest.net>\n"
+"Language-Team: Spanish <dprussi@qwest.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"X-Poedit-Language: Portuguese\n"
+"X-Poedit-Language: Spanish\n"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:44
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:46
@@ -25,7 +25,7 @@ msgstr "Marcar"
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:44
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:46
 msgid "Pass"
-msgstr "Permitir"
+msgstr "Pasar"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:45
 msgid "Block"
@@ -33,15 +33,15 @@ msgstr "Bloquear"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:45
 msgid "Quarantine"
-msgstr "Quarentena"
+msgstr "Cuarentena"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:47
 msgid "Low"
-msgstr "Baixo"
+msgstr "Bajo"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:47
 msgid "Medium"
-msgstr "Médio"
+msgstr "Mediano"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:47
 msgid "High"
@@ -49,7 +49,7 @@ msgstr "Alto"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:48
 msgid "Very High"
-msgstr "Muito alto"
+msgstr "Muy alto"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:48
 msgid "Extreme"
@@ -57,11 +57,11 @@ msgstr "Extremo"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:48
 msgid "Custom"
-msgstr "Personalizado"
+msgstr "Personalizada"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:51
 msgid "Email"
-msgstr "E-mail"
+msgstr "Email"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:63
 msgid "SMTP"
@@ -69,35 +69,35 @@ msgstr "SMTP"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:69
 msgid "Scan SMTP"
-msgstr "Varrer SMTP"
+msgstr "Analizar SMTP"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:82
 msgid "Enable SMTP tarpitting"
-msgstr "Habilitar SMTP tarpitting"
+msgstr "Activar el bloqueo SMPT de correo basura"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:106
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:208
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:311
 msgid "Strength"
-msgstr "Intensidade"
+msgstr "Resistencia"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:133
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:235
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:338
 msgid "Strength Value"
-msgstr "Valor de intensidade"
+msgstr "Valor de resistencia"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:140
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:242
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:345
 msgid "Strength Value must be a number. Smaller value is higher strength."
-msgstr "O valor de intensidade deve ser um número. Valor menor significa intensidade maior."
+msgstr "El valor de resistencia debe ser un número. Cuanto menor el número, tanto mayor el grado de resistencia."
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:162
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:264
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:367
 msgid "Action"
-msgstr "Ação"
+msgstr "Medida"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:178
 msgid "POP3"
@@ -105,7 +105,7 @@ msgstr "POP3"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:184
 msgid "Scan POP3"
-msgstr "Varrer POP3"
+msgstr "Analizar POP3"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:280
 msgid "IMAP"
@@ -113,7 +113,7 @@ msgstr "IMAP"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:286
 msgid "Scan IMAP"
-msgstr "Varrer IMAP"
+msgstr "Analizar IMAP"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:383
 msgid "Note"
@@ -121,39 +121,39 @@ msgstr "Nota"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:386
 msgid "Spam Blocker was last updated"
-msgstr "Bloqueador de Spam foi atualizado por último"
+msgstr "Última actualización de Spam Blocker"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:389
 msgid "unknown"
-msgstr "desconhecido"
+msgstr "desconocido"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:411
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:420
 msgid "pass message"
-msgstr "permitir mensagem"
+msgstr "pasar mensaje"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:414
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:422
 msgid "mark infection"
-msgstr "marcar infecção"
+msgstr "marcar infección"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:424
 msgid "block message"
-msgstr "bloquear mensagem"
+msgstr "bloquear mensaje"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:427
 msgid "quarantine message"
-msgstr "mensagem de quarentena"
+msgstr "poner mensaje en cuarentena"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:459
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:534
 msgid "timestamp"
-msgstr "marcação de horário"
+msgstr "fecha y hora"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:467
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:542
 msgid "action"
-msgstr "ação"
+msgstr "medida"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:472
 msgid "client"
@@ -161,20 +161,20 @@ msgstr "cliente"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:477
 msgid "subject"
-msgstr "assunto"
+msgstr "asunto"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:482
 msgid "receiver"
-msgstr "destinatário"
+msgstr "receptor"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:487
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:547
 msgid "sender"
-msgstr "remetente"
+msgstr "remitente"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:492
 msgid "SPAM score"
-msgstr "pontuação de SPAM"
+msgstr "Valor de correo basura"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:497
 msgid "server"
@@ -182,11 +182,11 @@ msgstr "servidor"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:511
 msgid "Tarpit Event Log"
-msgstr "Registro de evento tarpit"
+msgstr "Log de eventos de bloqueo de correo basura"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:521
 msgid "skipped"
-msgstr "ignorado"
+msgstr "saltado"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:521
 msgid "blocked"
@@ -198,40 +198,40 @@ msgstr "Servidor DNSBL"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:566
 msgid "Failed"
-msgstr "Falha"
+msgstr "Falló"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:566
 msgid "The value of Strength Value field is invalid."
-msgstr "O valor do campo 'Valor de intensidade' é inválido."
+msgstr "El campo Valor de resistencia contiene un valor no válido."
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:578
 msgid "Saving..."
-msgstr "Salvando..."
+msgstr "Guardando..."
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:578
 msgid "Please wait"
-msgstr "Aguarde"
+msgstr "Espere"
 
 #: ../../spam-base/impl/com/untangle/node/spam/RBLAllFilter.java:27
 #: ../../spam-base/impl/com/untangle/node/spam/SpamAllFilter.java:27
 msgid "All Events"
-msgstr "Todos os eventos"
+msgstr "Todos los eventos"
 
 #: ../../spam-base/impl/com/untangle/node/spam/RBLSkippedFilter.java:27
 msgid "Skipped Events"
-msgstr "Eventos ignorados"
+msgstr "Eventos saltados"
 
 #: ../../spam-base/impl/com/untangle/node/spam/SpamImpl.java:155
 msgid "Messages passed"
-msgstr "Mensagens permitidas"
+msgstr "Mensajes pasados"
 
 #: ../../spam-base/impl/com/untangle/node/spam/SpamImpl.java:155
 msgid "PASS"
-msgstr "PERMITIR"
+msgstr "PASAR"
 
 #: ../../spam-base/impl/com/untangle/node/spam/SpamImpl.java:156
 msgid "Messages blocked"
-msgstr "Mensagens bloqueadas"
+msgstr "Mensajes bloqueados"
 
 #: ../../spam-base/impl/com/untangle/node/spam/SpamImpl.java:156
 msgid "BLOCK"
@@ -239,7 +239,7 @@ msgstr "BLOQUEAR"
 
 #: ../../spam-base/impl/com/untangle/node/spam/SpamImpl.java:157
 msgid "Messages marked"
-msgstr "Mensagens marcadas"
+msgstr "Mensajes marcados"
 
 #: ../../spam-base/impl/com/untangle/node/spam/SpamImpl.java:157
 msgid "MARK"
@@ -247,33 +247,33 @@ msgstr "MARCAR"
 
 #: ../../spam-base/impl/com/untangle/node/spam/SpamImpl.java:158
 msgid "Messages quarantined"
-msgstr "Mensagens em quarentena"
+msgstr "Mensajes en cuarentena"
 
 #: ../../spam-base/impl/com/untangle/node/spam/SpamImpl.java:158
 msgid "QUARANTINE"
-msgstr "QUARENTENA"
+msgstr "CUARENTENA"
 
 #: ../../spam-base/impl/com/untangle/node/spam/SpamImpl.java:159
 msgid "Spam detected"
-msgstr "Spam detectado"
+msgstr "Correo basura detectado"
 
 #: ../../spam-base/impl/com/untangle/node/spam/SpamImpl.java:160
 msgid "Messages received"
-msgstr "Mensagens recebidas"
+msgstr "Mensajes recibidos"
 
 #: ../../spam-base/impl/com/untangle/node/spam/SpamLogFilter.java:27
 msgid "POP/IMAP Events"
-msgstr "Eventos POP/IMAP"
+msgstr "Sucesos POP/IMAP"
 
 #: ../../spam-base/impl/com/untangle/node/spam/SpamSmtpFilter.java:27
 msgid "SMTP Events"
-msgstr "Eventos SMTP"
+msgstr "Sucesos SMTP"
 
 #: ../../spam-base/impl/com/untangle/node/spam/SpamSpamFilter.java:27
 msgid "Spam Events"
-msgstr "Eventos de Spam"
+msgstr "Eventos de correo basura"
 
 #: ../../spam-base/impl/com/untangle/node/spam/SpamSpamFilter.java:29
 msgid "Identity Theft Events"
-msgstr "Eventos de roubo de identidade"
+msgstr "Eventos de robo de identidad"
 
