--- a/spyware/po/zh/untangle-node-spyware.po
+++ b/spyware/po/zh/untangle-node-spyware.po
@@ -5,12 +5,12 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: Untangle\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-11-21 14:15-0800\n"
-"PO-Revision-Date: 2008-11-07 02:13-0500\n"
-"Last-Translator: Jie(Jack) Zhu <J.Zhu@Impactek.com>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"PO-Revision-Date: 2008-11-21 17:20-0800\n"
+"Last-Translator: \n"
+"Language-Team: Chinese <j.zhu@impactek.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -295,9 +295,7 @@ msgstr "{0}间谍软件防护"
 
 #: ../servlets/spyware/src/com/untangle/node/spyware/BlockPageServlet.java:131
 #, java-format
-msgid ""
-"{0}This web page was blocked{1} because it may be designed to steal personal "
-"information."
+msgid "{0}This web page was blocked{1} because it may be designed to steal personal information."
 msgstr "{0}该网页已被阻止{1}因为它可能是专门设计来盗取您的私人信息的。"
 
 #: ../../http-casing/localapi/com/untangle/node/http/BlockPageUtil.java:67
@@ -375,3 +373,4 @@ msgstr "现在开始不阻止"
 #: ../../uvm-lib/servlets/blockpage/root/blockpage_template.jspx:63
 msgid "Unblock Permanently"
 msgstr "永远不阻止"
+
