--- a/webfilter-base/po/es/untangle-base-webfilter.po
+++ b/webfilter-base/po/es/untangle-base-webfilter.po
@@ -3,32 +3,28 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Untangle\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-11-21 14:15-0800\n"
-"PO-Revision-Date: 2008-11-21 17:10-0800\n"
+"PO-Revision-Date: 2008-11-21 16:18-0800\n"
 "Last-Translator: \n"
-"Language-Team: Chinese <j.zhu@impactek.com>\n"
+"Language-Team: Spanish <dprussi@qwest.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=1; plural=0;\n"
-"X-Poedit-Language: Chinese\n"
-"X-Poedit-Country: CHINA\n"
-"X-Poedit-SourceCharset: utf-8\n"
+"X-Poedit-Language: Spanish\n"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:30
 msgid "Block Lists"
-msgstr ""
+msgstr "Listas de bloqueo"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:40
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:157
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:268
 msgid "Categories"
-msgstr ""
+msgstr "Categorías"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:43
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:52
@@ -37,7 +33,7 @@ msgstr ""
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:640
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:649
 msgid "manage list"
-msgstr ""
+msgstr "administrar lista"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:49
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:181
@@ -46,35 +42,35 @@ msgstr ""
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:673
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:746
 msgid "Sites"
-msgstr ""
+msgstr "Sitios"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:58
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:205
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:474
 msgid "File Types"
-msgstr ""
+msgstr "Tipos de archivo"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:67
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:229
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:557
 msgid "MIME Types"
-msgstr ""
+msgstr "Tipos MIME"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:80
 msgid "User Bypass"
-msgstr ""
+msgstr "Ignorado por usuario"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:84
 msgid "None"
-msgstr ""
+msgstr "Ninguno"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:84
 msgid "Temporary"
-msgstr ""
+msgstr "Temporal"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:85
 msgid "Permanent and Global"
-msgstr ""
+msgstr "Permanente y global"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:106
 msgid "Block pages from IP only hosts"
@@ -82,7 +78,7 @@ msgstr ""
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:123
 msgid "Scan HTTPS"
-msgstr ""
+msgstr "Analizar HTTPS"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:245
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:367
@@ -90,18 +86,18 @@ msgstr ""
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:537
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:901
 msgid "block"
-msgstr ""
+msgstr "bloquear"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:257
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:372
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:459
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:542
 msgid "log"
-msgstr ""
+msgstr "log"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:295
 msgid "category"
-msgstr ""
+msgstr "categoría"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:300
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:415
@@ -110,25 +106,25 @@ msgstr ""
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:772
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:844
 msgid "description"
-msgstr ""
+msgstr "descripción"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:314
 msgid "Category"
-msgstr ""
+msgstr "Categoría"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:322
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:437
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:520
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:603
 msgid "Block"
-msgstr ""
+msgstr "Bloquear"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:336
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:441
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:524
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:607
 msgid "Log"
-msgstr ""
+msgstr "Log"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:340
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:445
@@ -137,11 +133,11 @@ msgstr ""
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:798
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:868
 msgid "Description"
-msgstr ""
+msgstr "Descripción"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:350
 msgid "\"URL\" specified cannot be blocked because it uses secure http (https)"
-msgstr ""
+msgstr "Imposible bloquear la \"URL\" especificada porque usa un servidor seguro (https)"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:362
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:411
@@ -150,12 +146,12 @@ msgstr ""
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:768
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:790
 msgid "Invalid \"URL\" specified"
-msgstr ""
+msgstr "Se ha especificado una \"URL\" no válida."
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:382
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:742
 msgid "[no site]"
-msgstr ""
+msgstr "[sin sitio]"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:385
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:472
@@ -163,143 +159,143 @@ msgstr ""
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:744
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:819
 msgid "[no description]"
-msgstr ""
+msgstr "[sin descripción]"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:405
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:762
 msgid "site"
-msgstr ""
+msgstr "sitio"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:429
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:786
 msgid "Site"
-msgstr ""
+msgstr "Sitio"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:492
 msgid "file type"
-msgstr ""
+msgstr "tipo de archivo"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:514
 msgid "File Type"
-msgstr ""
+msgstr "Tipo de archivo"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:575
 msgid "MIME type"
-msgstr ""
+msgstr "Tipo MIME"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:597
 msgid "MIME Type"
-msgstr ""
+msgstr "Tipo MIME"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:628
 msgid "Pass Lists"
-msgstr ""
+msgstr "Listas de paso"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:646
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:697
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:821
 msgid "IP addresses"
-msgstr ""
+msgstr "Direcciones IP"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:714
 msgid "\"URL\" specified cannot be passed because it uses secure http (https)"
-msgstr ""
+msgstr "Imposible pasar la \"URL\" especificada porque usa un servidor seguro (https)"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:732
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:807
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:898
 msgid "pass"
-msgstr ""
+msgstr "pasar"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:794
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:864
 msgid "Pass"
-msgstr ""
+msgstr "Pasar"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:836
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:858
 msgid "IP address/range"
-msgstr ""
+msgstr "Dirección/rango IP:"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:922
 msgid "in Categories Block list"
-msgstr ""
+msgstr "en la lista de bloqueo Categorías"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:924
 msgid "in URLs Block list"
-msgstr ""
+msgstr "en la lista de bloqueo URL"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:926
 msgid "in File Extensions Block list"
-msgstr ""
+msgstr "en la lista de bloqueo Extensiones de archivo"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:928
 msgid "in MIME Types Block list"
-msgstr ""
+msgstr "en la lista de bloqueo Tipos MIME"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:930
 msgid "blocking all traffic"
-msgstr ""
+msgstr "bloqueando todo el tráfico"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:932
 msgid "hostname is an IP address"
-msgstr ""
+msgstr "El nombre del host es una dirección IP:"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:934
 msgid "in URLs Pass list"
-msgstr ""
+msgstr "en la lista de paso URL"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:936
 msgid "in Clients Pass list"
-msgstr ""
+msgstr "en la lista de paso Clientes"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:939
 msgid "no rule applied"
-msgstr ""
+msgstr "no se aplicó ninguna regla"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:946
 msgid "timestamp"
-msgstr ""
+msgstr "fecha y hora"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:954
 msgid "action"
-msgstr ""
+msgstr "medida"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:959
 msgid "client"
-msgstr ""
+msgstr "cliente"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:966
 msgid "request"
-msgstr ""
+msgstr "solicitud"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:972
 msgid "reason for action"
-msgstr ""
+msgstr "motivo de la medida tomada"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:977
 msgid "server"
-msgstr ""
+msgstr "servidor"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:1051
 msgid "Invalid subnet specified"
-msgstr ""
+msgstr "Ha especificado una subred no válida"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:1059
 msgid "Validation failed"
-msgstr ""
+msgstr "Error de validación"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:1063
 msgid "Failed"
-msgstr ""
+msgstr "Falló"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:1077
 msgid "Saving..."
-msgstr ""
+msgstr "Guardando..."
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:1077
 msgid "Please wait"
-msgstr ""
+msgstr "Espere"
 
 #: ../servlets/webfilter/src/com/untangle/node/webfilter/BlockPageServlet.java:59
 #: ../servlets/webfilter/src/com/untangle/node/webfilter/BlockPageServlet.java:69
@@ -313,78 +309,79 @@ msgstr ""
 #: ../servlets/webfilter/src/com/untangle/node/webfilter/BlockPageServlet.java:110
 #, java-format
 msgid "{0} | {1} Warning"
-msgstr ""
+msgstr "Advertencia {0} | {1}"
 
 #: ../servlets/webfilter/src/com/untangle/node/webfilter/BlockPageServlet.java:133
 #, java-format
 msgid "{0}This web page was blocked{1} because it is considered inappropriate."
-msgstr ""
+msgstr "{0}Esta página web fue bloqueada{1} porque se considera inapropiada."
 
 #: ../../http-casing/localapi/com/untangle/node/http/BlockPageUtil.java:67
 #, java-format
 msgid "If you have any questions, Please contact {0}."
-msgstr ""
+msgstr "Si tiene preguntas comuníquese con {0}."
 
 #: ../impl/com/untangle/node/webfilter/WebFilterAllFilter.java:47
 msgid "All HTTP Traffic"
-msgstr ""
+msgstr "Todo el tráfico HTTP"
 
 #: ../impl/com/untangle/node/webfilter/WebFilterBase.java:115
 msgid "Pages scanned"
-msgstr ""
+msgstr "Páginas analizadas"
 
 #: ../impl/com/untangle/node/webfilter/WebFilterBase.java:115
 msgid "SCAN"
-msgstr ""
+msgstr "ANALIZAR"
 
 #: ../impl/com/untangle/node/webfilter/WebFilterBase.java:116
 msgid "Pages blocked"
-msgstr ""
+msgstr "Páginas bloqueadas"
 
 #: ../impl/com/untangle/node/webfilter/WebFilterBase.java:116
 msgid "BLOCK"
-msgstr ""
+msgstr "BLOQUEAR"
 
 #: ../impl/com/untangle/node/webfilter/WebFilterBase.java:117
 msgid "Pages passed"
-msgstr ""
+msgstr "Páginas pasadas"
 
 #: ../impl/com/untangle/node/webfilter/WebFilterBase.java:117
 msgid "PASS"
-msgstr ""
+msgstr "PASAR"
 
 #: ../impl/com/untangle/node/webfilter/WebFilterBase.java:118
 msgid "Passed by policy"
-msgstr ""
+msgstr "Pasado por póliza"
 
 #: ../impl/com/untangle/node/webfilter/WebFilterBlockedFilter.java:36
 msgid "Blocked HTTP Traffic"
-msgstr ""
+msgstr "Tráfico HTTP bloqueado"
 
 #: ../impl/com/untangle/node/webfilter/WebFilterPassedFilter.java:47
 msgid "Passed HTTP Traffic"
-msgstr ""
+msgstr "Tráfico HTTP pasado"
 
 #: ../impl/com/untangle/node/webfilter/WebFilterWhitelistFilter.java:36
 msgid "Whitelisted HTTP Traffic"
-msgstr ""
+msgstr "Tráfico HTTP en lista blanca"
 
 #: ../../uvm-lib/servlets/blockpage/root/blockpage_template.jspx:48
 msgid "Host:"
-msgstr ""
+msgstr "Host:"
 
 #: ../../uvm-lib/servlets/blockpage/root/blockpage_template.jspx:49
 msgid "URL:"
-msgstr ""
+msgstr "URL:"
 
 #: ../../uvm-lib/servlets/blockpage/root/blockpage_template.jspx:51
 msgid "Reason:"
-msgstr ""
+msgstr "Razón:"
 
 #: ../../uvm-lib/servlets/blockpage/root/blockpage_template.jspx:57
 msgid "Unblock For Now"
-msgstr ""
+msgstr "Desbloquear por ahora"
 
 #: ../../uvm-lib/servlets/blockpage/root/blockpage_template.jspx:63
 msgid "Unblock Permanently"
-msgstr ""
+msgstr "Desbloquear permanentemente"
+
